--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- max-width for ultra wide resolutions -->
     <div class="container-fluid" style="max-width: 1400px">
       <div class="row">
-        <aside class="col-lg-3 pb-3">
+        <aside class="col-4 pb-3">
           <h2 id="form-heading" class="mt-1 h3 form-label">
             Search for a City:
           </h2>
@@ -29,6 +29,7 @@
                   class="form-input weather-search"
                   type="text"
                   id="search-input"
+                  style= "width:75px;"
                   placeholder="London"
                   aria-labelledby="form-heading"
                   aria-controls="today forecast"
@@ -50,7 +51,7 @@
           <div class="list-group" id="history"></div>
         </aside>
 
-        <div class="col-lg-9 pb-3">
+        <div class="col-8 pb-3">
           <section
             id="today"
             class="mt-3"
